src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@media (hover: hover) and (pointer: fine) {
  *:hover {
  }
}

:root {
  --color-primary: #2d2df1;
}

html {
  scrollbar-color: #2d2df1 white;
  scrollbar-width: 6px;
}

html.dark {
  scrollbar-color: #17cac6 #001324;
  scrollbar-width: 6px;
}

html::-webkit-scrollbar {
  background-color: white;
  width: 6px;
}

html.dark::-webkit-scrollbar {
  background-color: #001324;
  width: 6px;
}

